# cloud-cost-audit-finops-demo

./: .editorconfig  .env.example  .gitignore  COMMERCIAL_LICENSE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cloud_cost_audit/: cli.py  config.py  logging_config.py  pipeline.py
cloud_cost_audit/analytics/: metrics.py  quick_wins.py  waste_detection.py
cloud_cost_audit/dashboard/: app.py
cloud_cost_audit/io/: cloud_providers.py  paths.py  synthetic_data.py
cloud_cost_audit/models/: __init__.py  core.py
cloud_cost_audit/reporting/: dashboard_snapshot.py  executive_report.py
cloud_cost_audit/reporting/templates/: executive_report.html.j2
cloud_cost_audit/transforms/: normalize.py
config/: demo.yaml
data/: README.md
docs/: engagement_summary.md
iac/: README.md
iac/aws_cur_example/: README.md  main.tf  outputs.tf  variables.tf
iac/gcp_billing_export_example/: README.md  main.tf  variables.tf
scripts/: README.md
tests/: test_integration_pipeline.py  test_metrics.py  test_quick_wins.py  test_smoke_demo.py
