[project]
name = "cloud-cost-audit-finops-demo"
version = "0.1.0"
requires-python = ">=3.11"
description = "Local, deterministic FinOps cloud cost audit demo (AWS/GCP) with executive report + dashboard."
readme = "README.md"
license = { file = "LICENSE" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"cloud_cost_audit/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
pretty = true

[tool.pytest.ini_options]
addopts = "-q"
